# osu_twitch_bot

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/osu_memory_reader/: mem.rs  mod.rs  read.rs  win.rs
