[package]
name = "osu_twitch_bot"
version = "1.0.1"
edition = "2021"
license = "MIT"
authors = ["Sheppsu"]

[dependencies]
failure = "0.1.8"
futures = "0.3.30"
irc = "1.0.0"
rosu-pp = "1.0.0"
tokio = { version = "1.37.0", features = ["rt", "macros"]}
paste = "1.0.14"

[dependencies.windows]
version = "0.52.0"
features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory"
]